# opengl-renderer

./: .gitignore  CMakeLists.txt  README.md  setup.bat
include/: Camera.h  LightingManager.h  Shader.h
include/glad/: glad.h
lib/: glfw3.lib
shaders/: lit_geometry.fs  lit_geometry.vs
src/: LightingManager.cpp  Shader.cpp  glad.c  main.cpp
